[package]
name = "map2ava"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.38"
hashbrown = "0.11"
clap = "3.1"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
